--- a/comentarios-filmes-series.html
+++ b/comentarios-filmes-series.html
@@ -73,7 +73,9 @@
                         distinctio quod vero dicta minus nemo esse accusamus ipsum vel natus aliquam quisquam! Iure
                         fugit enim ipsum, officia culpa laudantium consectetur voluptas laborum, molestiae architecto
                         fuga sit eveniet qui quisquam numquam quis porro earum illo incidunt. Sint, ratione libero.</p>
-                    <p id="nota">Nota:3/5</p>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="1">&#9733;</span>
                 </div>
                 <div class="comentario">
                     <h3>@InceptionEnthusiast</h3>
@@ -82,7 +84,11 @@
                         quisquam a nisi officia dolor provident maxime quidem, odit nulla esse omnis nobis optio sunt
                         minus nostrum enim temporibus! Aperiam eius nulla corrupti perferendis, sapiente rem. Provident
                         maxime est officia alias nihil laudantium labore beatae quae unde cupiditate.</p>
-                    <p id="nota">Nota:4/5</p>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="1">&#9733;</span>
+
                 </div>
                 <div class="comentario">
                     <h3>@GodfatherGuru</h3>
@@ -92,7 +98,12 @@
                         expedita voluptatum recusandae aliquam quis dignissimos perferendis aliquid ipsa sint
                         repudiandae. Ipsum quae repellendus animi saepe voluptas omnis et, voluptatibus labore
                         molestias, error sint tenetur ratione enim explicabo?</p>
-                    <p id="nota">Nota:5/5</p>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="1">&#9733;</span>
+
                 </div>
             </div>
     </main>
