Criação da barra pesquisa

--- a/atores-vida-obra.html
+++ b/atores-vida-obra.html
@@ -19,6 +19,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="./js/atores-vida-obra.js" defer></script>
     <title>Atores Vida&Obra</title>
 </head>
 
@@ -29,51 +30,60 @@
         <div class="filters">
             <form action="/pesquisar" method="GET">
                 <input type="text" name="q" placeholder="Pesquisar ator ou atriz...">
-                <button type="submit">Pesquisar</button>
+                <button class="botao" type="submit">Pesquisar</button>
             </form>
         </div>
 
-        <div class="content">
+        <!-- <div class="content">
             <div class="item">
                 <div class="comment">
                     <img src=".\img\keanureeves.jpg" alt="Ator Keannu Reeves" class="imagem"><br>
-                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                        dolore eu
-                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                        deserunt mollit anim id est laborum."<br>
+                    <br>
+                    <p class="sobre">
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et
+                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                            aliquip
+                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                            dolore eu
+                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                            deserunt mollit anim id est laborum."<br>
+                    </p>
                 </div>
             </div>
             <div class="item">
                 <div class="comment">
                     <img src=".\img\galgadot.jpg" alt="Atriz Gal Gadot" class="imagem"><br>
-                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                        dolore eu
-                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                        deserunt mollit anim id est laborum."<br>
+                    <br>
+                    <p class="sobre">
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                           incididunt ut labore et
+                           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                           aliquip
+                           ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                           dolore eu
+                           fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                           deserunt mollit anim id est laborum."<br>
+                    </p>
                 </div>
             </div>
             <div class="item">
                 <div class="comment">
                     <img src=".\img\ianmackelen.jpg" alt="Ator Ian Mackelen" class="imagem"><br>
-                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                        dolore eu
-                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                        deserunt mollit anim id est laborum."<br>
+                    <br>
+                    <p class="sobre">
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                           incididunt ut labore et
+                           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                           aliquip
+                           ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                           dolore eu
+                           fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                           deserunt mollit anim id est laborum."<br>
+                    </p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer id="home-footer"></footer>
 </body>
