--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
 
         </div>
         <div class="input-container">
-            <a href="home.html"><button>Entrar</button></a>
+            <a href="home.html"><button class="botao">Entrar</button></a>
         </div>
         <div class="bottom-options">
             <a href="#">Não está registrado? Crie uma conta!</a>
