--- a/destaquesDeHoje.html
+++ b/destaquesDeHoje.html
@@ -19,36 +19,42 @@
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <title>Destaques</title>
+        <script type="module" src="./js/destaques.js" defer></script>
     </head>
 <body>
     <header id="home-header"></header>
     <main>
-        <h1>Destaques</h1>
-        <h2>Confira os Destaques de Hoje</h2>
-        <div class="content">
+        <h1>Confira os Destaques de Hoje</h1>
+        <!-- <div class="content">
             <div class="item">
                 <div class="comment">
-                    <img src="./img/adão.png" alt="AdãoNegro" class="imagem"><br>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
-                    <a href="http://">Clique para assistir</a>
+                    <img src="./img/adão.png" alt="AdãoNegro" class="imagem"><br><br>
+                    <p class="sobre">
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
+                    </p>
+                    <a href="https://www.youtube.com/watch?v=HluMG9tJXHM">Clique para assistir</a>
                 </div>
             </div>
             <div class="item">
                 <div class="comment">
-                    <img src="./img/Batman.jpg" alt="Batman" class="imagem"><br>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
-                    <a href="http://">Clique para assistir</a>
+                    <img src="./img/Batman.jpg" alt="Batman" class="imagem"><br><br>
+                    <p class="sobre">
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
+                    </p>
+                    <a href="https://www.youtube.com/watch?v=rsQEor4y2hg">Clique para assistir</a>
                 </div>
             </div>
             <div class="item">
                 <div class="comment">
-                    <img src="./img/man.png" alt="Homem de Ferro" class="imagem"><br>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
-                    <a href="http://">Clique para assistir</a>
+                    <img src="./img/man.png" alt="Homem de Ferro" class="imagem"><br><br>
+                    <p class="sobre">
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."<br>
+                    </p>
+                    <a href="https://www.youtube.com/watch?v=xXAdp_KJ-0A">Clique para assistir</a>
                 </div>
             </div>
-        </div>
-        <h3>Os Melhoes filmes você encontra aqui, na IMDB.</h3>
+        </div> -->
+        <!-- <h3>Os Melhoes filmes você encontra aqui, na IMDB.</h3> -->
     </main>
     
         
