--- a/home.html
+++ b/home.html
@@ -69,11 +69,8 @@
     </section>
     <h2 style="margin-left: 40px; padding-left: 10px; border-left: 2px solid #E2B616;color: white;">Em Destaque Hoje
     </h2>
-    <section class="mt-5 w-100 d-flex flex-row align-content-center justify-content-around">
-      <div id="cardCarousel" class="carousel slide w-100" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="card" style="width: 18rem;">
+    <section class="mt-5 overflow-auto d-flex flex-row align-content-center justify-content-around sectionCards">
+            <div class="card" >
               <img class="card-img-top" src="./img/adão.png" alt="Card image cap"
                 style="max-width: 100%; height: auto;">
               <div class="card-body">
@@ -83,9 +80,8 @@
                   e justiça, enquanto ele enfrenta desafios sobrenaturais e outros super-heróis da DC.</p>
               </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card" style="width: 18rem;">
+
+            <div class="card" >
               <img class="card-img-top" src="./img/bezouro-azul.jpg" alt="Card image cap"
                 style="max-width: 100%; height: auto;">
               <div class="card-body">
@@ -93,9 +89,9 @@
                   Titãs. O filme pode explorar as aventuras desse super-herói, também conhecido como Ted Kord.</p>
               </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card" style="width: 18rem;">
+
+
+            <div class="card" >
               <img class="card-img-top" src="./img/avatar.jpg" alt="Card image cap"
                 style="max-width: 100%; height: auto;">
               <div class="card-body">
@@ -105,9 +101,8 @@
                   planeta. O filme é uma exploração de temas como colonização, respeito pela natureza e identidade.</p>
               </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card" style="width: 18rem;">
+
+            <div class="card" >
               <img class="card-img-top" src="./img/barbie.jpg" alt="Card image cap"
                 style="max-width: 100%; height: auto;">
               <div class="card-body">
@@ -116,10 +111,9 @@
                   aborda mensagens de amizade, autoaceitação e positividade. As histórias variam desde contos de fadas
                   até aventuras modernas, sempre com a personagem Barbie no centro das experiências emocionantes.</p>
               </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card" style="width: 18rem;">
+
+
+            <div class="card" >
               <img class="card-img-top" src="./img/matrix.jpg" alt="Card image cap"
                 style="max-width: 100%; height: auto;">
               <div class="card-body">
@@ -130,87 +124,52 @@
                   máquinas dominam a Terra.</p>
               </div>
             </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#cardCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#cardCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Próximo</span>
-        </a>
-      </div>
     </section>
 
     <h2 style="margin-left: 40px; padding-left: 10px; border-left: 2px solid #E2B616; color: white;" class="mt-5">
       Notícias Recentes</h2>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Exemplo Noticia.</h5>
-        <p class="card-text">Exemplo Noticia descricao detalhada sobre</p>
-        <p class="card-text"><small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
-      </div>
-    </div>
+
     <section class="mt-5 w-60 d-flex align-content-center justify-content-around">
-      <div class="cardUm">
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
+        <div class="card" >
             <div class=" img-card-noticia">
               <img src="./img/beyoncé.png" class="img-fluid img-noticia rounded-start  " alt="...">
             </div>
-            <div class="col-md-8">
+            <div class="w-100 p-2">
               <div class="card-body">
                 <h5 class="card-title">Beyoncé estrela seu novo filme.</h5>
                 <p class="card-text">O Novo filme musical com estrelato de beyoncé já apareceu como teaser no grammy
                   desse ano.</p>
-                <p class="card-text"><small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
+                ><small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
               </div>
             </div>
-          </div>
         </div>
-      </div>
-      <div class="cardDois">
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
+        <div class="card" >
             <div class=" img-card-noticia">
               <img src="./img/beyoncé.png" class="img-fluid img-noticia rounded-start  " alt="...">
             </div>
-            <div class="col-md-8">
+            <div  class="w-100 p-2">
               <div class="card-body">
                 <h5 class="card-title">Beyoncé estrela seu novo filme.</h5>
                 <p class="card-text">O Novo filme musical com estrelato de beyoncé já apareceu como teaser no grammy
                   desse ano.</p>
-                <p class="card-text"><small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
+               <small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
               </div>
             </div>
-          </div>
         </div>
-      </div>
-      <div class="cardTres">
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
+        <div class="card " >
             <div class=" img-card-noticia">
               <img src="./img/beyoncé.png" class="img-fluid img-noticia rounded-start  " alt="...">
             </div>
-            <div class="col-md-8">
+            <div  class="w-100 p-2">
               <div class="card-body">
                 <h5 class="card-title">Beyoncé estrela seu novo filme.</h5>
                 <p class="card-text">O Novo filme musical com estrelato de beyoncé já apareceu como teaser no grammy
-                  desse ano.</p>
-                <p class="card-text"><small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
+                  desse ano. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi quis soluta, error aut provident sapiente debitis hic quisquam nobis, iure commodi ad ducimus. Exercitationem, quos possimus! Cupiditate dolorum qui aliquam!</p>
+                <small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
               </div>
             </div>
-          </div>
         </div>
     </section>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Exemplo Noticia.</h5>
-        <p class="card-text">Exemplo Noticia descricao detalhada sobre</p>
-        <p class="card-text"><small class="text-body-secondary">Ultima atualização 1 hora atrás.</small></p>
-      </div>
-    </div>
   </main>
   <footer id="home-footer"></footer>
 </body>
