corrigindo img login

--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/imdb.jpg" alt="Logo IMDB" class="imagem">
+            <img src="img/imdb.jpg" alt="Logo IMDB" class="imagem2">
         </div>
     </header>
 
